<resources>
    <string name="app_name">SqLite</string>
    <string name="name">Enter the Name</string>
    <string name="mail">Enter the Mail (Optional)</string>
    <string name="number">Enter the Number</string>
    <string name="delete_data">Delete Data</string>
    <string name="edit_data">Edit Data</string>
    <string name="see_data">See Data</string>
    <string name="save_data">Save Data</string>
</resources>